<?xml version="1.0"?>
<package format="2">
  <name>ros_test_2</name>
  <version>0.1.0</version>
  <description>Vector Map Server</description>

  <maintainer email="gaowenjie999@stu.xjtu.edu.cn">WJGao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_test_1</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ros_test_1</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_test_1</exec_depend>

</package>
